fix: back button cutoff

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,7 @@ html, body {
 :focus {
   outline: none;
 }
+
+.mat-icon-button {
+  width: auto !important;
+}
